--- a/public/playground/demo4.htm
+++ b/public/playground/demo4.htm
@@ -17,7 +17,7 @@
 			}
 			
 			body {
-				background: #ffffff url(mammoth.jpg) no-repeat;
+				background: #ffffff url(bg.jpg) no-repeat;
 				background-size: cover;
 				margin: 0;
 				padding: 0;
